Added input field, button, and list to html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
 
   <body>
+    <input type="text" />
+    <button>Submit</button>
+    <ul id="ul-el"></ul>
+
     <script src="script.js"></script>
   </body>
 </html>
