Styled application and lead list

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   </head>
 
   <body>
-    <input type="text" />
-    <button>Submit</button>
-    <ul id="ul-el"></ul>
+    <div class="content-container">
+      <input type="text" />
+      <button>Submit</button>
+      <ul id="ul-el"></ul>
+    </div>
 
     <script src="script.js"></script>
   </body>
