Added list functionality in js by storing input values in list innerHTML

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <body>
     <div class="content-container">
-      <input type="text" />
-      <button>Submit</button>
+      <input id="input-text" type="text" />
+      <button id="submit-btn">Submit</button>
       <ul id="ul-el"></ul>
     </div>
 
