Added delete button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <div class="content-container">
       <input id="input-text" type="text" />
-      <button id="submit-btn">Submit</button>
+      <div class="btn-container">
+        <button id="submit-btn">Submit</button>
+        <button id="delete-btn">Delete</button>
+      </div>
       <ul id="ul-el"></ul>
     </div>
 
