--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <input id="input-text" type="text" />
       <div class="btn-container">
         <button id="submit-btn">Submit</button>
+        <button id="tab-btn">Save Tab</button>
         <button id="delete-btn">Delete</button>
       </div>
       <ul id="ul-el"></ul>
